[gd_scene load_steps=42 format=2]

[ext_resource path="res://StageManager.gd" type="Script" id=1]
[ext_resource path="res://NotePlayer.gd" type="Script" id=2]
[ext_resource path="res://assets/PianoSounds/Piano_C.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/PianoSounds/Piano_C#.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/PianoSounds/Piano_D.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/PianoSounds/Piano_D#.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/PianoSounds/Piano_E.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/PianoSounds/Piano_F.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/PianoSounds/Piano_F#.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/PianoSounds/Piano_G.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/PianoSounds/Piano_G#.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/PianoSounds/Piano_A.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/PianoSounds/Piano_A#.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/PianoSounds/Piano_B.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/SynthSounds/Synth_C.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/SynthSounds/Synth_C#.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/SynthSounds/Synth_D.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/SynthSounds/Synth_D#.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/SynthSounds/Synth_E.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/SynthSounds/Synth_F.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/SynthSounds/Synth_F#.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/SynthSounds/Synth_G.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/SynthSounds/Synth_G#.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/SynthSounds/Synth_A.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/SynthSounds/Synth_A#.wav" type="AudioStream" id=25]
[ext_resource path="res://assets/SynthSounds/Synth_B.wav" type="AudioStream" id=26]
[ext_resource path="res://SpritesManager.gd" type="Script" id=27]
[ext_resource path="res://BGMusic1.wav" type="AudioStream" id=28]
[ext_resource path="res://BGMusicPlayer.gd" type="Script" id=29]
[ext_resource path="res://assets/speaker.png" type="Texture" id=30]
[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=31]
[ext_resource path="res://robot-design.png" type="Texture" id=32]
[ext_resource path="res://standing-up-man-.png" type="Texture" id=33]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 31 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://assets/fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = SubResource( 6 )

[sub_resource type="Animation" id=8]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1024, 0 ) ]
}

[node name="MainScene" type="Node"]
script = ExtResource( 1 )

[node name="PlayerNotePlayer" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 2 )
default_volume = -2.0

[node name="C" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 3 )
bus = "C"

[node name="C#" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 4 )
bus = "C#"

[node name="D" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 5 )
bus = "D"

[node name="D#" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 6 )
bus = "D#"

[node name="E" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 7 )
bus = "E"

[node name="F" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 8 )
bus = "F"

[node name="F#" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 9 )
bus = "F#"

[node name="G" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 10 )
bus = "G"

[node name="G#" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 11 )
bus = "G#"

[node name="A" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 12 )
bus = "A"

[node name="A#" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 13 )
bus = "A#"

[node name="B" type="AudioStreamPlayer" parent="PlayerNotePlayer"]
stream = ExtResource( 14 )
bus = "B"

[node name="Tween" type="Tween" parent="PlayerNotePlayer"]

[node name="RobotNotePlayer" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 2 )
is_robot = true
default_volume = -14.0

[node name="C" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 15 )
bus = "C"

[node name="C#" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 16 )
bus = "C#"

[node name="D" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 17 )
bus = "D"

[node name="D#" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 18 )
bus = "D#"

[node name="E" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 19 )
bus = "E"

[node name="F" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 20 )
bus = "F"

[node name="F#" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 21 )
bus = "F#"

[node name="G" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 22 )
bus = "G"

[node name="G#" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 23 )
bus = "G#"

[node name="A" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 24 )
bus = "A"

[node name="A#" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 25 )
bus = "A#"

[node name="B" type="AudioStreamPlayer" parent="RobotNotePlayer"]
stream = ExtResource( 26 )
bus = "B"

[node name="Tween" type="Tween" parent="RobotNotePlayer"]

[node name="SpritesManager" type="Node" parent="."]
script = ExtResource( 27 )

[node name="Sprite_C" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_C"]
margin_left = 90.0
margin_top = 570.0
margin_right = 210.0
margin_bottom = 600.0
color = Color( 0.698039, 0, 0.717647, 1 )

[node name="Label" type="Label" parent="SpritesManager/Sprite_C"]
margin_left = 130.652
margin_top = 578.116
margin_right = 170.652
margin_bottom = 592.116
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "C: [A]"

[node name="Sprite_Csharp" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_Csharp"]
margin_left = 150.0
margin_top = 540.0
margin_right = 270.0
margin_bottom = 570.0
color = Color( 0.717647, 0, 0.219608, 1 )

[node name="Label2" type="Label" parent="SpritesManager/Sprite_Csharp"]
margin_left = 185.967
margin_top = 548.075
margin_right = 231.967
margin_bottom = 562.075
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "C#: [W]"

[node name="Sprite_D" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_D"]
margin_left = 210.0
margin_top = 570.0
margin_right = 330.0
margin_bottom = 600.0
color = Color( 0.466667, 0.0196078, 0.470588, 1 )

[node name="Label3" type="Label" parent="SpritesManager/Sprite_D"]
margin_left = 248.911
margin_top = 578.355
margin_right = 294.911
margin_bottom = 592.355
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "D: [S]"

[node name="Sprite_Dsharp" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_Dsharp"]
margin_left = 270.0
margin_top = 540.0
margin_right = 390.0
margin_bottom = 570.0
color = Color( 0.254902, 0.0196078, 0.470588, 1 )

[node name="Label4" type="Label" parent="SpritesManager/Sprite_Dsharp"]
margin_left = 308.756
margin_top = 548.79
margin_right = 354.756
margin_bottom = 562.79
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "D#: [E]"

[node name="Sprite_E" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_E"]
margin_left = 330.0
margin_top = 570.0
margin_right = 450.0
margin_bottom = 600.0
color = Color( 0.858824, 0.407843, 0.180392, 1 )

[node name="Label5" type="Label" parent="SpritesManager/Sprite_E"]
margin_left = 368.123
margin_top = 579.07
margin_right = 414.123
margin_bottom = 593.07
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "E: [D]"

[node name="Sprite_F" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_F"]
margin_left = 450.0
margin_top = 570.0
margin_right = 570.0
margin_bottom = 600.0
color = Color( 0.219608, 1, 0, 1 )

[node name="Label6" type="Label" parent="SpritesManager/Sprite_F"]
margin_left = 491.627
margin_top = 577.401
margin_right = 537.627
margin_bottom = 591.401
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "F: [F]"

[node name="Sprite_Fsharp" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_Fsharp"]
margin_left = 510.0
margin_top = 540.0
margin_right = 630.0
margin_bottom = 570.0
color = Color( 1, 0.890196, 0, 1 )

[node name="Label7" type="Label" parent="SpritesManager/Sprite_Fsharp"]
margin_left = 545.988
margin_top = 548.075
margin_right = 591.988
margin_bottom = 562.075
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "F#: [T]"

[node name="Sprite_G" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_G"]
margin_left = 570.0
margin_top = 570.0
margin_right = 690.0
margin_bottom = 600.0
color = Color( 0, 0.298039, 1, 1 )

[node name="Label8" type="Label" parent="SpritesManager/Sprite_G"]
margin_left = 605.594
margin_top = 578.355
margin_right = 651.594
margin_bottom = 592.355
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "G: [G]"

[node name="Sprite_Gsharp" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_Gsharp"]
margin_left = 630.0
margin_top = 540.0
margin_right = 750.0
margin_bottom = 570.0
color = Color( 0, 0.133333, 1, 1 )

[node name="Label9" type="Label" parent="SpritesManager/Sprite_Gsharp"]
margin_left = 670.207
margin_top = 548.075
margin_right = 716.207
margin_bottom = 562.075
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "G#: [Y]"

[node name="Sprite_A" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_A"]
margin_left = 690.0
margin_top = 570.0
margin_right = 810.0
margin_bottom = 600.0
color = Color( 0.756863, 0, 1, 1 )

[node name="Label10" type="Label" parent="SpritesManager/Sprite_A"]
margin_left = 727.906
margin_top = 579.308
margin_right = 773.906
margin_bottom = 593.308
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "A: [H]"

[node name="Sprite_Asharp" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_Asharp"]
margin_left = 750.0
margin_top = 540.0
margin_right = 870.0
margin_bottom = 570.0
color = Color( 0.968627, 0, 1, 1 )

[node name="Label11" type="Label" parent="SpritesManager/Sprite_Asharp"]
margin_left = 787.035
margin_top = 548.075
margin_right = 833.035
margin_bottom = 562.075
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "A#: [U]"

[node name="Sprite_B" type="Sprite" parent="SpritesManager"]

[node name="ColorRect" type="ColorRect" parent="SpritesManager/Sprite_B"]
margin_left = 810.0
margin_top = 570.0
margin_right = 930.0
margin_bottom = 600.0
color = Color( 1, 0, 0.423529, 1 )

[node name="Label12" type="Label" parent="SpritesManager/Sprite_B"]
margin_left = 854.51
margin_top = 578.355
margin_right = 900.51
margin_bottom = 592.355
rect_pivot_offset = Vector2( 108.024, 5.74866 )
text = "B: [J]"

[node name="BGStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
volume_db = -7.068
autoplay = true
script = ExtResource( 29 )

[node name="Speaker" type="Sprite" parent="."]
position = Vector2( 500, 240 )
texture = ExtResource( 30 )

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 31.0
margin_right = 81.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="Score" type="Label" parent="."]
margin_left = 904.846
margin_top = 34.0907
margin_right = 961.846
margin_bottom = 80.0907
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="CorrectAnswer" type="Label" parent="."]
margin_left = 330.0
margin_top = 98.0
margin_right = 547.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 5 )
text = "Correct Answer:"

[node name="YourAnswer" type="Label" parent="."]
margin_left = 329.682
margin_top = 53.6783
margin_right = 509.682
margin_bottom = 89.6783
custom_fonts/font = SubResource( 7 )
text = "Your Answer:"

[node name="robot-design" type="Sprite" parent="."]
position = Vector2( 954.233, 483.289 )
z_index = -1
texture = ExtResource( 32 )

[node name="standing-up-man-" type="Sprite" parent="."]
position = Vector2( 29.4414, 535.186 )
z_index = -2
texture = ExtResource( 33 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
margin_left = -1024.0
margin_bottom = 600.0
color = Color( 0.698039, 0, 0.717647, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
autoplay = "StepAnimation"
anims/StepAnimation = SubResource( 8 )
[connection signal="note_played" from="PlayerNotePlayer" to="." method="_on_NotePlayer_note_played"]
[connection signal="note_played" from="PlayerNotePlayer" to="SpritesManager" method="_on_NotePlayer_note_played"]
[connection signal="finished" from="BGStreamPlayer" to="BGStreamPlayer" method="_on_BGStreamPlayer_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
